<resources>
    <string name="app_name">homework42.3</string>
    <string name="to_do_list">To do list</string>
    <string name="add_to_do">Add to do</string>
    <string name="to_do_name">To do name</string>
    <string name="to_do_description">To do description</string>
    <string name="to_do_create_data">To do create data</string>
    <string name="to_do_dedline">To do dedline</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="development">Development</string>
    <string name="uploading">Uploading</string>
    <string name="reject">Reject</string>
    <string name="closed">Closed</string>
</resources>