<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Property">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_name_plan"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/qizgish"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:text="@string/add_to_do"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:text="@string/to_do_description"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_plan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <TextView
                android:id="@+id/txt_degree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/to_do_dedline"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/to_do_create_data"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_create_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginBottom="30dp"
            android:text="@string/to_do_create_data"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/to_do_dedline"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_dedline_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:textStyle="italic" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/rad_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open" />

            <RadioButton
                android:id="@+id/rad_dev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/development" />

            <RadioButton
                android:id="@+id/rad_uploading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploading" />

            <RadioButton
                android:id="@+id/rad_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reject" />

            <RadioButton
                android:id="@+id/rad_closed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_ok"
            android:padding="5dp"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="30dp"
            android:focusable="true"
            android:text="Ok"
            android:backgroundTint="@color/qizgish"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>